[package]
name = "kli"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primetype/kli"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "cryptoxide", "ed25519", "curve25519"]
description = "General purpose key management and associated cryptographic protocols"
exclude = [
    ".gitignore",
]

[dependencies]
keynesis =  { version = "0.3.0", path = "../keynesis"}

rand_chacha = "0.2.2"
hex = "0.4.2"
serde_json = "1.0"
rand_core =  { version = "0.5.1",  default-features = true,  features = ["getrandom"] }
tokio =      { version = "0.2.22", default-features = false, features = ["full"] }
futures =    { version = "0.3.4",  default-features = false, features = [ "std", "async-await", ] }
tokio-util = { version = "^0.3.0", default-features = false, features = [ "codec" ] }
structopt =  { version = "0.3.18", default-features = false }

[dev-dependencies]
quickcheck        = "0.9.2"
quickcheck_macros = "0.9.1"
